aks/frontend/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-service
  labels:
    app: fe-service
    deployment: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      # app: fe-service2
      # deployment: blue
  template:
    metadata:
      labels:
        app: fe-service
        deployment: blue
    spec:
      containers:
      - name: fe-service
        image: mcsdevopsentarch.azurecr.io/bp-service:latest
        resources:
          requests:
            cpu: 500m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 256Mi
        ports:
        - containerPort: 4000
          name: http
          protocol: TCP
      imagePullSecrets:
      - name: myseckey
