aks/frontend/service-test.yaml
kind: Service
apiVersion: v1
metadata:
  name: svc-fe-service-test-${TARGET_ROLE}
labels:
  app: fe-service
  role: test-${TARGET_ROLE}
spec:
  type: LoadBalancer
  selector:
    app: fe-service
    role: ${TARGET_ROLE}
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 22137
