aks/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fe-service
  namespace: default
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: svc-fe-service 
          servicePort: 80
